<resources>
    <string name="app_name">AudioPlayer</string>
    <string name="audio_title_placeholder">audio title</string>
    <string name="audio_duration_placeholder">00:00</string>
    <string name="audio_author_placeholder">audio author</string>
    <string name="play_button_description">play button</string>
    <string name="backwards_button_description">skip backwards</string>
    <string name="forward_button_description">skip forward</string>
    <string name="no_title">Unknown title</string>
    <string name="no_artist">Unknown artist</string>
    <string name="notification_play">Play</string>
    <string name="notification_pause">Pause</string>
    <string name="notification_next">Next</string>
    <string name="notification_restart">Restart</string>
    <string name="settings_title">Settings</string>
    <string name="transition_label">Transition type</string>
    <string name="folder_label">Audio source</string>
    <string name="folder_choose_message">Pick an audio folder</string>
    <string name="about_title">About</string>
    <string name="donald_description">Donald Duck</string>

    <!-- Preference keys-->
    <string name="transition_key">pref_transitionType</string>
    <string name="folder_key">pref_folderSource</string>

    <string name="title_activity_about">AboutActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
