<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="?android:listPreferredItemHeightLarge">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardUseCompatPadding="true"
        card_view:cardElevation="2dp"
        card_view:cardMaxElevation="2dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@null"
                android:contentDescription="@string/play_button_description"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/audioDuration"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_play"
                card_view:layout_constraintHorizontal_weight="0.6" />

            <TextView
                android:id="@+id/audioAuthor"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:paddingBottom="4dp"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:text="@string/audio_author_placeholder"
                android:textColor="@color/textColor"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/audioDuration"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/audioTitle"
                card_view:layout_constraintHorizontal_weight="2"
                card_view:layout_constraintVertical_weight="2" />

            <TextView
                android:id="@+id/audioTitle"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="bottom"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:text="@string/audio_title_placeholder"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/audioAuthor"
                app:layout_constraintEnd_toStartOf="@+id/audioDuration"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                card_view:layout_constraintHorizontal_weight="2"
                card_view:layout_constraintVertical_weight="2.5" />

            <TextView
                android:id="@+id/audioDuration"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="top|end"
                android:paddingBottom="4dp"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:paddingTop="4dp"
                android:text="@string/audio_duration_placeholder"
                android:textColor="@color/textColor"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageButton"
                app:layout_constraintStart_toEndOf="@+id/audioTitle"
                app:layout_constraintTop_toTopOf="@id/guidelineTop"
                card_view:layout_constraintHorizontal_bias="0.5"
                card_view:layout_constraintHorizontal_weight="0.45"
                card_view:layout_constraintVertical_weight="1" />

            <android.support.constraint.Guideline
                android:id="@+id/guidelineTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                card_view:layout_constraintGuide_percent="0.18" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</FrameLayout>
